# checkbids

./: README.md  pyproject.toml  setup.py
checkbids/: main.py
